testsuite/tests/overloadedlists/should_fail/overloadedlistsfail03.hs
{-# LANGUAGE OverloadedLists #-}

main = print (length ['a',"b"])
