testsuite/tests/overloadedlists/should_fail/overloadedlistsfail03.stderr

overloadedlistsfail03.hs:3:28: error:
    • Couldn't match type ‘[Char]’ with ‘Char’
      Expected: GHC.Exts.Item [Char]
        Actual: String
    • In the expression: "b"
      In the first argument of ‘length’, namely ‘(['a', "b"] :: [Char])’
      In the first argument of ‘print’, namely
        ‘(length (['a', "b"] :: [Char]))’
